k8s/09-plane-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-worker
  namespace: plane
  labels:
    app.kubernetes.io/name: plane-worker
    app.kubernetes.io/part-of: plane
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: plane-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/volt-shared/volt-plane-backend:build-5
          command: ["./bin/docker-entrypoint-worker.sh"]
